update gitignore remove storedVars

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ results.csv
 *.csv
 New Compressed (zipped) Folder.zip
 Parametric/ParametricQuickExamples.xlsx
+storedTrainingVariables12-25.mat
+storedTrainingVariables12-15.mat
+storedTrainingVariables12-35.mat
+storedTrainingVariables34-15.mat
+storedTrainingVariables34-25.mat
+storedTrainingVariables34-35.mat
+storedTrainingVariables12ALL.mat
+storedTrainingVariables34ALL.mat
+storedTrainingVariables56-15.mat
+storedTrainingVariables56-25.mat
+storedTrainingVariables56-35.mat
+storedTrainingVariables56ALL.mat
