--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ storedTrainingVariables56-15.mat
 storedTrainingVariables56-25.mat
 storedTrainingVariables56-35.mat
 storedTrainingVariables56ALL.mat
+OLDstoredTrainingVariables12-25.mat
+OLDstoredTrainingVariables34-25.mat
+OLDstoredTrainingVariables56-25.mat
+OLDstoredTrainingVariablesBroken.mat
+storedTrainingVariables.mat
