--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,19 @@ OLDstoredTrainingVariables12-25.mat
 OLDstoredTrainingVariables56-25.mat
 OLDstoredTrainingVariables34-25.mat
 OLDstoredTrainingVariablesBroken.mat
+*.fig
+*.fig
+ImageProcessing/ADistandTime.mat
+ImageProcessing/BDistandTime.mat
+ImageProcessing/CDistandTime.mat
+ImageProcessing/DDistandTime.mat
+ImageProcessing/EDistandTime.mat
+ImageProcessing/ETESTDistandTime.mat
+*.png
+storedAllDataVariables.mat
+storedTrainingVariables100PCONLY.mat
+storedTrainingVariables35ORIGINALWRONGFLOW.mat
+storedTrainingVariables50.mat
+storedTrainingVariables50PCONLY.mat
+storedTrainingVariablesBEN25.mat
+storedTrainingVariablesFIRSTHALF.mat
