changes to drawing graphs

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ storedTrainingVariables50.mat
 storedTrainingVariables50PCONLY.mat
 storedTrainingVariablesBEN25.mat
 storedTrainingVariablesFIRSTHALF.mat
+ImageProcessing/Graphs1_6_24.zip
