--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ storedTrainingVariables50PCONLY.mat
 storedTrainingVariablesBEN25.mat
 storedTrainingVariablesFIRSTHALF.mat
 ImageProcessing/Graphs1_6_24.zip
+PythonLog.txt
